aplicando style ao formulario de login

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                         <span class="material-symbols-outlined">vpn_key</span>
                         <input type="password" name="senha" id="isenha" placeholder="sua senha" autocomplete="current-password" required minlength="8" maxlength="20">
                         <label for="isenha">Senha</label>
-                        <input type="submit" value="Entrar">
                     </div>
-                    <a href="esqueci.html">Esqueci a senha <span class="material-symbols-outlined">mail</span></a> 
+                    <input type="submit" value="Entrar">
+                    <a href="esqueci.html" class="botao">Esqueci a senha <span class="material-symbols-outlined">mail</span></a> 
                 </form>
             </div>
         </section>
